# pixie

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.claude/skills/release/: SKILL.md
.claude/workflows/: build-ai-chat-app.js  build-ai-chat-app.md
.github/workflows/: release.yml
docs/: add_http_protocol_support.md  builtin_engine_protocol_support.md  builtin_engine_protocol_support_updated.md  builtin_engine_troubleshooting.md  claude-engine-commands.md  quick_fix_http_protocol_support.md  quick_fix_url_protocol.md  quick_reference_builtin_macos_x86.md  releasing.md  research-pi-coding-agent.md
scripts/: check_url_protocol.sh  diagnose_builtin.sh
src/: App.tsx  index.css  main.tsx  openExternal.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude.rs  lib.rs  main.rs  pty.rs  summarizer.rs
src-tauri/src/engine/: claude.rs  codebuddy.rs  cursor.rs  mod.rs  persistent.rs  shared.rs
src-tauri/src/engine/builtin/: mod.rs  platform_detection.rs
src-tauri/src/search/: bm25.rs  index.rs  mod.rs  parser.rs
src/components/: ChatView.tsx  DiffViewer.tsx  EngineBadge.tsx  ErrorBoundary.tsx  InputBar.tsx  MarketplacePanel.tsx  MessageBubble.tsx  NewAgentModal.tsx  RightPanel.tsx  ScheduledTasksPanel.tsx  SearchPalette.tsx  Settings.tsx  Sidebar.tsx  SkillsDropdown.tsx  Terminal.tsx
src/hooks/: useChat.ts  useDragRegion.ts  useScheduledTasks.ts
src/lib/: diffParser.ts  highlight.ts  languages.ts  storage.ts  wordDiff.ts
